<resources>
    <string name="app_name">MDH Schema</string>

    <string name="title_section1">Schema</string>
    <string name="title_section2">Hantera Schema</string>
    <string name="title_section3">MDH Busstider</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>
    
    <string name="search_hint">SÖK KURSKOD</string>
    <string name="search_button">Lägg Till</string>
    <string name="search_toast_nocourse">Inga kurser valda!</string>
    <string name="search_toast_coursesupdated">Schema uppdaterat!</string>
    <string name="search_toast_notconnected">Du är inte ansluten till internet!</string>
    <string name="http_error">Kunde inte ansluta till servern!</string>

    <string name="tab_week">Vecka:</string>
    <string name="tab_nothing_to_show">Inget att visa! lägg till scheman</string>

    <string name="v_2_e">Västerås Till Eskilstuna</string>
    <string name="e_2_v">Eskilstuna Till Västerås</string>
    <string name="buss_days">(Måndag-Fredag)</string>
    <string name="v_ce">Västerås\nCentralen</string>
    <string name="v_ca">Västerås\nCampus</string>
    <string name="e_ce">Eskilstuna\nCentralen</string>
    <string name="space">space</string>
</resources>
