<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" >

        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            card_view:cardCornerRadius="4dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical" >

            <TextView
                android:text="@string/v_2_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/TextVasteras" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/buss_days"
                android:id="@+id/textView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/v_ce"
                    android:id="@+id/textView2"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/v_ca"
                    android:id="@+id/textView3"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/e_ce"
                    android:id="@+id/textView4"
                    android:textColor="#000000" />
            </LinearLayout>

            <com.example.carl.mdhschemaapp.ExpandableHeightGridView
                android:id="@+id/myId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numColumns="3"
                android:clickable="false"
                android:focusableInTouchMode="false" >
            </com.example.carl.mdhschemaapp.ExpandableHeightGridView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        card_view:cardCornerRadius="4dp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/e_2_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/TextEskilstuna" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/buss_days"
                android:id="@+id/textBussDaysE2V" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/e_ce"
                    android:id="@+id/textCentralen"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/v_ca"
                    android:id="@+id/textCampus"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/v_ce"
                    android:id="@+id/textCentralenE"
                    android:textColor="#000000"/>
            </LinearLayout>

            <com.example.carl.mdhschemaapp.ExpandableHeightGridView
                android:id="@+id/gridViewE2V"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numColumns="3" >
            </com.example.carl.mdhschemaapp.ExpandableHeightGridView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:visibility="invisible"/>



</LinearLayout>
</ScrollView>